[package]
name = "sereve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
rpassword = "7.3.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
ssh2 = "0.9.4"
tabled = "0.14.0"
